--- a/React/src/index.css
+++ b/React/src/index.css
@@ -1,68 +1,61 @@
-:root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
 body {
+  font-family: Georgia, serif;
+  background-color: #f8f8f8;
   margin: 0;
+  padding: 0;
+}
+
+.header {
+  text-align: center;
+  background-color: lightblue;
+  padding: 5px;
+}
+
+/* Navbar */
+.navbar-container {
   display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  justify-content: center;
+  text-align: center;
+  border: 2px solid black;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+/* Forms */
+.form-container {
+  margin: 50px;
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+.form-header {
+  font-weight: bold;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+.form-group {
+  padding: 8px;
+}
+
+.redirect-container {
+  text-align: center;
+}
+
+.redirect-container h3 {
+  padding: 5px;
+  font-weight: bold;
+}
+
+/* Home */
+.users-header {
+  margin-top: 10px;
+  margin-left: 100px;
+  font-weight: bold;
+}
+
+.users-list {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding: 10px;
+  margin-left: 200px;
+}
+
+.user-container {
+  padding: 15px;
 }
