--- a/React/src/index.css
+++ b/React/src/index.css
@@ -16,11 +16,10 @@ body {
 }
 
 /* Navbar */
-.navbar-container {
+.nav-link {
   display: flex;
-  justify-content: center;
-  text-align: center;
-  border: 2px solid black;
+  text-align: left;
+  padding-left: 1%;
 }
 
 /* Forms */
@@ -54,6 +53,25 @@ body {
   font-weight: bold;
 }
 
+.account-image {
+  margin: 4%;
+  border-radius: 1%;
+  box-shadow: 0 10px 30px black;
+}
+
+.account-info {
+  margin-top: 5%;
+}
+
+.user-buttons {
+  display: flex;
+  justify-content: right;
+}
+
+.user-buttons button {
+  margin: 5px;
+}
+
 /* Home */
 .background-container {
   background-image: url("./assets/dungeon3.jpg");
@@ -66,6 +84,7 @@ body {
   height: 100vh;
   margin-left: 10%;
   margin-right: 10%;
+  padding: 3%;
   background-color: rgba(56, 56, 56, 0.897);
   display: block;
   justify-content: center;
@@ -75,4 +94,8 @@ body {
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
   border-bottom: 1px solid black;
   box-shadow: 0 10px 12px black;
+}
+
+.section button {
+  margin-top: 2%;
 }
