added sidebar, changes to public game files

--- a/public/game.css
+++ b/public/game.css
@@ -9,6 +9,51 @@
   margin: 0;
 }
 
+/* add sidebar css */
+#left-sidebar {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-right: 20px;
+  background-color: black;
+}
+/* portrait image css  */
+#character-portrait img,
+#enemy-portrait img {
+  width: 200px;
+  height: 200px;
+  border: 7px groove gold;
+  margin: 5px 0 5px 0;
+}
+/* set keyframes to make pulsing red box-shadow  */
+@keyframes pulseRed {
+  0% {
+    box-shadow: 0 0 1px red;
+  }
+  50% {
+    box-shadow: 0 0 15px 5px red;
+  }
+  100% {
+    box-shadow: 0 0 1px red;
+  }
+}
+
+/* pulse over 2 seconds  */
+.glow-red {
+  animation: pulseRed 2s infinite;
+}
+
+/* portrait css  */
+#enemy-portrait {
+  margin: 20psx 0;
+}
+
+#instructions {
+  padding: 5px;
+  background-color: #000000;
+  color: white;
+}
+
 .game-wrapper canvas {
   border: 1px solid #000;
   background-color: #fff;
