--- a/src/index.css
+++ b/src/index.css
@@ -18,7 +18,7 @@ body {
 
 .header {
   background-color: black;
-  background-image: url("./assets/dungeon.jpg");
+  background-image: url("./public/assets/dungeon.jpg");
 }
 
 .game-header {
@@ -133,23 +133,24 @@ body {
 table {
   width: 100%;
   border-collapse: collapse;
+  background-color: #333;
 }
 
 table th,
 table td {
-  border: 1px solid #ddd;
+  border: 1px solid #555;
   padding: 8px;
   text-align: left;
 }
 
 table th {
-  background-color: #f2f2f2;
-  color: #333;
+  background-color: #444;
+  color: #f2f2f2;
 }
 
 table td {
-  background-color: #fff;
-  color: #333;
+  background-color: #222;
+  color: #ddd;
 }
 
 button {
