added instructions border

--- a/src/index.css
+++ b/src/index.css
@@ -241,6 +241,8 @@ button:hover {
 }
 
 #instructions {
+  border: 7px groove burlywood;
+  height: 239px;
   width: 200px;
   padding: 5px;
   color: white;
